# ecg_pro

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  source-revision.txt
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260423_000001_initial_schema.py
services/api/app/: __init__.py  main.py  router.py
services/api/app/core/: config.py  deps.py  security.py
services/api/app/db/: bootstrap.py  demo_seed.py  mixins.py  models.py  session.py
services/api/app/domain/: enums.py
services/api/app/modules/admin/: router.py  schemas.py  service.py
services/api/app/modules/auth/: repository.py  router.py  schemas.py  service.py
services/api/app/modules/cases/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/learning/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/media/: __init__.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/quizzes/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/system/: __init__.py  router.py  schemas.py
services/api/app/modules/taxonomy/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/scripts/: bootstrap_admin.py  docker-entrypoint.sh  seed_demo_data.py
services/api/tests/: conftest.py  test_admin_content_api.py  test_auth_api.py  test_demo_seed.py  test_media_learning_api.py  test_quiz_api.py
(+48 files in other folders)
